@@ -1,14 +1,14 @@
 Package: asht
 Type: Package
 Title: Applied Statistical Hypothesis Tests
-Version: 0.5
-Date: 2015-07-09
+Version: 0.6
+Date: 2016-05-04
 Author: Michael P. Fay
 Maintainer: Michael P. Fay <mfay@niaid.nih.gov>
 Description: Some hypothesis test functions with a focus on non-asymptotic methods that have matching confidence intervals. 
 License: GPL-3
 Depends: stats, exact2x2, exactci, bpcp, ssanv, coin
 NeedsCompilation: no
-Packaged: 2015-07-11 05:15:28 UTC; faym
+Packaged: 2016-05-11 13:37:25 UTC; faym
 Repository: CRAN
-Date/Publication: 2015-07-11 11:02:17
+Date/Publication: 2016-05-11 18:20:31
