@@ -1,16 +1,16 @@
-3de7f228bd1800502b1c112ee25232ce *DESCRIPTION
+cd24ba4b2bd6ba66858b5a69bd68cf33 *DESCRIPTION
 04f2836c14db8b77e115ab85d1121268 *NAMESPACE
 cccc310a253727ebea5d8c653bb1a033 *R/cvTest.R
 bda45415259ef112d8ce48e5362405d2 *R/quantileTest.R
 b7711cc595966697e37e1c3a50d03c1c *R/signTest.R
 fd29c60ae46915eba59c7df2b9727d69 *R/var1Test.R
-40ac6529e0964a4a01e1029fc15e1278 *R/wspoissonTest.R
+90b7397a0bf6c4881d23c66772c26923 *R/wspoissonTest.R
 138d55e7950cf8d5845161916e5ba089 *R/wsrTest.R
-11169af0b121ff90d1bbeb4fb5ce2e85 *inst/NEWS.Rd
-f530cf08b7b42466ad7088239fbf52f3 *man/asht-package.Rd
+5470061916d6d6e24e61962a1ebba39b *inst/NEWS.Rd
+c9cb14d22011c0a79128db844e0511bb *man/asht-package.Rd
 a5ac45714756649532711311dbd8ebfb *man/cvTest.Rd
 9cc654d835dcbbae6e90ebf782a4d56d *man/quantileTest.Rd
 2b7d4c4b08cf5373826e0e2fb21d020e *man/signTest.Rd
 24a101d525cec262cd9dcdac8151b614 *man/var1Test.Rd
-06565f2e17ab9a626b44b5feec9e89cc *man/wspoissonTest.Rd
+e5e9252399b263eecb390e001b80312b *man/wspoissonTest.Rd
 a32690c0be2e5578cb764de71b85d878 *man/wsrTest.Rd
